--- a/source/partials/_top_nav_bar.html.haml
+++ b/source/partials/_top_nav_bar.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-expand-lg.fixed-top.justify-content-center.py-3.bg-white.d-none.d-lg-flex
+%nav.navbar.navbar-expand-lg.fixed-top.justify-content-center.px-0.py-3.bg-white.d-none.d-md-flex
   .navbar-nav
     %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/' } Home
     .nav-item.dropdown
@@ -14,3 +14,4 @@
         %a.dropdown-item{ href: '/interests#hobbies'} Hobbies
         %a.dropdown-item{ href: '/interests#books'} Books
         %a.dropdown-item{ href: '/interests#music'} Music
+    %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
