--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -68,6 +68,7 @@
 
   %body
     = partial 'partials/top_nav_bar'
+    = partial 'partials/mobile_nav_bar'
     .container-fluid
       = yield
       = partial 'partials/footer'
