--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -1,10 +1,10 @@
 #footer
   .row
-    .col
+    .col-10.offset-1
       %hr
   .section.footer
-    .row
-      .col-12.col-md-6.offset-md-3.text-center
+    .row.my-5
+      .col-8.offset-2.text-center
         %span
           %p.copy-source
             Source
