--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -28,6 +28,10 @@ a:hover {
 }
 
 nav {
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+  }
+
   .active {
     color: $theme-teal;
   }
@@ -42,6 +46,7 @@ nav {
     .nav-link.active {
       color: $theme-teal;
     }
+
   }
 
   a:hover {
@@ -202,25 +207,13 @@ nav {
 #content {
   width: calc(100% - 250px);
   padding: 0px 40px 40px 40px;
-  min-height: 100vh;
   transition: all 0.3s;
 }
 
-#content.active {
-  width: 100%;
-}
 
 /* MEDIAQUERIES */
 @media (max-width: 768px) {
-  .container-fluid {
-    padding-top: 0rem;
-  }
-
   .circle-image {
-    width: 100%;
-  }
-
-  #content.active {
     width: 100%;
   }
 
