--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -6,7 +6,7 @@
     .row.my-5
       .col-8.offset-2.text-center
         %span
-          %p.copy-source
+          %p.font-italic.font-weight-bold
             Source
             %a{ href: 'https://github.com/atsmith813/alexsmith.codes', target: '_blank' } GitHub
             %br
