--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -4,11 +4,11 @@
     .col-8.offset-2
       %h3
         Where I've been
-      %p.about-me-quote
+      %p.about-me-quote.font-italic
         %i.fa.fa-quote-left.fa-3x.fa-pull-left
         You don't know where you're going until you know where you've been.
       %br
-      %p.about-me-text
+      %p.font-weight-normal
         = partial 'partials/past'
 #present
   .row
@@ -18,7 +18,7 @@
     .col-8.offset-2
       %h3
         Where I am
-      %p.about-me-quote
+      %p.about-me-quote.font-italic
         %i.fa.fa-quote-left.fa-3x.fa-pull-left
         Our DNA is 96% chimpanzee. Is that even worth arguing?! If I gave
         you a sandwich that was filled with 96% sh*t and 4% ham, would you
@@ -26,7 +26,7 @@
         taking things too seriously, just remember that we are talking monkeys
         on an organic spaceship flying through the universe. - Joe Rogan
       %br
-      %p.about-me-text
+      %p.font-weight-normal
         = partial 'partials/present'
 #future
   .row
@@ -36,7 +36,7 @@
     .col-8.offset-2
       %h3
         Where I'm going
-      %p.about-me-quote
+      %p.about-me-quote.font-italic
         %i.fa.fa-quote-left.fa-3x.fa-pull-left
         I don't regret the things I've done, only the things I've never tried.
       %br
