--- a/source/partials/_present.html.haml
+++ b/source/partials/_present.html.haml
@@ -86,10 +86,8 @@
   of dollars in legal fees.
 %p
   #justice-video
-    <iframe width="853" height="480"
-    src="https://www.youtube.com/embed/CZTwJlIw2AA?rel=0&amp;showinfo=0"
-    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
-    picture-in-picture" allowfullscreen></iframe>
+    .embed-responsive.embed-responsive-16by9.col-xs-12.text-center
+      %iframe{ allow: 'accelerometer; autoplay; encrypted-media; gyroscope;\npicture-in-picture', allowfullscreen: '', class: 'embed-responsive-item', frameborder: '0', height: '480', src: 'https://www.youtube.com/embed/CZTwJlIw2AA?rel=0&showinfo=0', width: '853' }
 %p#dev
   %a{ href: 'https://dev.to/atsmith813/new-year-new-opportunity-same-me-i-ve-joined-the-dev-team-47k8', target: '_blank' } Recently I joined the team at
   %a{ href: 'https://dev.to', target: '_blank' } DEV
