--- a/source/partials/_future.html.haml
+++ b/source/partials/_future.html.haml
@@ -1,4 +1,4 @@
-%h5.text-center 2020
+.h5.text-center 2020
 %p
   This year I'm trying something a little different by setting quarterly goals.
 %br
