--- a/source/experience.html.haml
+++ b/source/experience.html.haml
@@ -1,6 +1,7 @@
-.section
+#experience.pt-5
   .row
-    .col-8.offset-2.justify-content-center
+  .row.my-5
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Quick timeline of professional experience
       %p
