--- a/source/partials/_experience_links.html.haml
+++ b/source/partials/_experience_links.html.haml
@@ -1,13 +1,13 @@
 #experience-links
   .row.text-center
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
             = link_to 'DEV (dev.to)', '/about#dev'
           %p.card-text
             Software Engineer
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
@@ -16,28 +16,28 @@
               %span.d-block.d-md-inline-block Iron Tree
           %p.card-text
             Cofounder & Creator
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
             = link_to 'Intrinio', '/about#intrinio'
           %p.card-text
             Software Engineer
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
             = link_to 'TicketFire', '/about#ticketfire'
           %p.card-text
             Software Engineer
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
             = link_to 'MentorcliQ', '/about#mentorcliq'
           %p.card-text
             Director of Higher Education
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
           %h3.card-title
