Fix mobile views and layout

--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -1,7 +1,6 @@
 #past.pt-5
-  .row
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Where I've been
       %p.about-me-quote.font-italic
@@ -15,7 +14,7 @@
     .col-10.offset-1
       %hr
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Where I am
       %p.about-me-quote.font-italic
@@ -33,7 +32,7 @@
     .col-10.offset-1
       %hr
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Where I'm going
       %p.about-me-quote.font-italic
