--- a/source/interests.html.haml
+++ b/source/interests.html.haml
@@ -1,7 +1,6 @@
 #hobbies.pt-5
-  .row
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Hobbies
       %p
@@ -28,7 +27,7 @@
     .col-10.offset-1
       %hr
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Books
       %p
@@ -66,7 +65,7 @@
     .col-10.offset-1
       %hr
   .row.my-5
-    .col-8.offset-2
+    .col-md-8.offset-md-2.col-sm-12
       %h3
         Favorite music artists
       %p
