--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -2,33 +2,32 @@
   .row
     .col-10.offset-1
       %hr
-  .section.footer
-    .row.my-5
-      .col-8.offset-2.text-center
+  .row.my-5.text-center
+    .col-md-8.offset-md-2.col-sm-12
+      %span
+        %p.font-italic.font-weight-bold
+          Source
+          %a{ href: 'https://github.com/atsmith813/alexsmith.codes', target: '_blank' } GitHub
+          %br
+          = "Copyright ©#{Date.today.year} Alexander Smith"
+      %br
+      %p
+        I'm not very active on social media, but smash those like, follow, and
+        subscribe buttons to stay updated on my rare and exclusive posts!
+      %p
         %span
-          %p.font-italic.font-weight-bold
-            Source
-            %a{ href: 'https://github.com/atsmith813/alexsmith.codes', target: '_blank' } GitHub
-            %br
-            = "Copyright ©#{Date.today.year} Alexander Smith"
-        %br
-        %p
-          I'm not very active on social media, but smash those like, follow, and
-          subscribe buttons to stay updated on my rare and exclusive posts!
-        %p
-          %span
-            %p.social-media-icon-links.hover-effect
-              %a{ href: 'mailto:workwithalexsmith@gmail.com', target: '_blank', "data-tooltip" => "I'll get back to you within 24 hours" }
-                %i.far.fa-envelope.fa-2x
-              %a{ href: 'https://github.com/atsmith813', target: '_blank', "data-tooltip" => "Check out some code!" }
-                %i.fab.fa-github.fa-2x
-              %a{ href: 'https://twitter.com/atsmith813', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
-                %i.fab.fa-twitter.fa-2x
-              %a{ href: 'https://www.instagram.com/allthingssmurff/', target: '_blank', "data-tooltip" => "I only have 6 pictures" }
-                %i.fab.fa-instagram.fa-2x
-              %a{ href: 'https://www.facebook.com/alex.smiff.7', target: '_blank', "data-tooltip" => "I haven't posted in several years" }
-                %i.fab.fa-facebook.fa-2x
-              %a{ href: 'https://dev.to/atsmith813', target: '_blank', "data-tooltip" => "I work here and write articles sometimes!" }
-                %i.fab.fa-dev.fa-2x
-              %a{ href: 'https://medium.com/@A_Smith223', target: '_blank', "data-tooltip" => "I've written a few articles" }
-                %i.fab.fa-medium.fa-2x
+          %p.social-media-icon-links.hover-effect
+            %a{ href: 'mailto:workwithalexsmith@gmail.com', target: '_blank', "data-tooltip" => "I'll get back to you within 24 hours" }
+              %i.far.fa-envelope.fa-2x
+            %a{ href: 'https://github.com/atsmith813', target: '_blank', "data-tooltip" => "Check out some code!" }
+              %i.fab.fa-github.fa-2x
+            %a{ href: 'https://twitter.com/atsmith813', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
+              %i.fab.fa-twitter.fa-2x
+            %a{ href: 'https://www.instagram.com/allthingssmurff/', target: '_blank', "data-tooltip" => "I only have 6 pictures" }
+              %i.fab.fa-instagram.fa-2x
+            %a{ href: 'https://www.facebook.com/alex.smiff.7', target: '_blank', "data-tooltip" => "I haven't posted in several years" }
+              %i.fab.fa-facebook.fa-2x
+            %a{ href: 'https://dev.to/atsmith813', target: '_blank', "data-tooltip" => "I work here and write articles sometimes!" }
+              %i.fab.fa-dev.fa-2x
+            %a{ href: 'https://medium.com/@A_Smith223', target: '_blank', "data-tooltip" => "I've written a few articles" }
+              %i.fab.fa-medium.fa-2x
