--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -43,5 +43,5 @@
         = partial 'partials/future'
       %br
       %p.font-italic
-        %a{ href: '/goals' } Here
+        %a{ href: '/goals.html' } Here
         you can see past goals and progress.
