--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,11 +34,11 @@
               (I'm Black and German). Want to learn more? You can read more
               about...
             %p
-              %a{ href: '#past' } How I went from flipping burgers at the neighborhood DQ to Wall Street.
+              %a{ href: '/about.html#past' } How I went from flipping burgers at the neighborhood DQ to Wall Street.
             %p
-              %a{ href: '#present' } How I retired from being a corporate mercenary and became a Full-Stack Developer at a startup.
+              %a{ href: '/about.html#present' } How I retired from being a corporate mercenary and became a Full-Stack Developer at a startup.
             %p
-              %a{ href: '#future' } What I'm working towards next.
+              %a{ href: '/about.html#future' } What I'm working towards next.
             %p
               And while we're still talking about me, you can
               %a{ href: 'https://hirealexsmith.com' } hire me
