--- a/source/partials/_mobile_nav_bar.html.haml
+++ b/source/partials/_mobile_nav_bar.html.haml
@@ -5,7 +5,7 @@
   #mobileNavBar.collapse.navbar-collapse
     .navbar-nav
       %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/' } Home
-      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/about' } About
-      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/experience' } Experience
-      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/interests' } Interests
+      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/about.html' } About
+      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/experience.html' } Experience
+      %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/interests.html' } Interests
       %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
