--- a/source/partials/_past.html.haml
+++ b/source/partials/_past.html.haml
@@ -26,7 +26,7 @@
   internship had been a rotation program, so I had the opportunity to
   experience many different teams, but now I was on the structured
   products team full-time. What is a structured product?
-  %a{ href: '/structured_products', target: '_blank' } Here
+  %a{ href: '/structured_products.html', target: '_blank' } Here
   is more information with examples and visuals made by yours truly.
 %p
   So what did I do? I would model and price these products by analyzing
