--- a/source/partials/_top_nav_bar.html.haml
+++ b/source/partials/_top_nav_bar.html.haml
@@ -2,17 +2,16 @@
   .navbar-nav
     %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/' } Home
     .nav-item.dropdown
-      %a#aboutDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', href: '/about' } About
+      %a#aboutDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', href: '/about.html' } About
       .dropdown-menu{ 'aria-labelledby' => 'aboutDropdownMenuLink' }
-        %a.dropdown-item{ href: '/about#past'} Past
-        %a.dropdown-item{ href: '/about#present'} Present
-        %a.dropdown-item{ href: '/about#future'} Goals
-    -#%a.nav-item.nav-link.rounded.font-weight-bold{ href: '/experience' } Experience
-    = link_to "Experience", "/experience.html", class: 'nav-item nav-link rounded font-weight-bold'
+        %a.dropdown-item{ href: '/about.html#past'} Past
+        %a.dropdown-item{ href: '/about.html#present'} Present
+        %a.dropdown-item{ href: '/about.html#future'} Goals
+    %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/experience.html' } Experience
     .nav-item.dropdown
-      %a#interestsDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', href: '/interests' } Interests
+      %a#interestsDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', href: '/interests.html' } Interests
       .dropdown-menu{ 'aria-labelledby' => 'interestsDropdownMenuLink' }
-        %a.dropdown-item{ href: '/interests#hobbies'} Hobbies
-        %a.dropdown-item{ href: '/interests#books'} Books
-        %a.dropdown-item{ href: '/interests#music'} Music
+        %a.dropdown-item{ href: '/interests.html#hobbies'} Hobbies
+        %a.dropdown-item{ href: '/interests.html#books'} Books
+        %a.dropdown-item{ href: '/interests.html#music'} Music
     %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
