--- a/source/partials/_future.html.haml
+++ b/source/partials/_future.html.haml
@@ -1,6 +1,6 @@
-.h5.text-center 2020
+.h5.text-center 2021
 %p
-  This year I'm trying something a little different by setting quarterly goals.
+  2020 was quite the year. I'm looking forward to 2021!
 %br
-- goals2020 = data.goals.select { |goal| goal.year == "2020" }
-= partial('partials/goals_table', locals: { goals: goals2020 })
+- goals2021 = data.goals.select { |goal| goal.year == "2021" }
+= partial('partials/goals_table', locals: { goals: goals2021 })
