--- a/source/partials/_present.html.haml
+++ b/source/partials/_present.html.haml
@@ -91,10 +91,15 @@
 %p#dev
   %a{ href: 'https://dev.to/atsmith813/new-year-new-opportunity-same-me-i-ve-joined-the-dev-team-47k8', target: '_blank' } Recently I joined the team at
   %a{ href: 'https://dev.to', target: '_blank' } DEV
-  working remotely as a Software Engineer! If you're not already familiar,
+  (now known as
+  %a{ href: 'https://forem.com', target: '_blank' } Forem
+  ) working remotely as a Software Engineer! If you're not already familiar,
   %a{ href: 'https://dev.to', target: '_blank' } DEV
   is an open-source community of software developers getting together to help
   one another out.
+  %a{ href: 'https://forem.com', target: '_blank' } Forem
+  is the open-source platform that powers DEV that anyone can use to create an
+  online community of their own.
 %p
   Currently, I'm on the Site Reliability Engineering (SRE) team with
   %a{ href: 'https://twitter.com/molly_struve', target: '_blank' } Molly Struve
