Update role and resume

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -27,7 +27,7 @@
 
     / Open Graph
     %meta{ content: 'website', property: 'og:type' }
-    %meta{ content: 'Alex Smith | Software Engineer', property: 'og:title' }
+    %meta{ content: 'Alex Smith | Senior Software Engineer', property: 'og:title' }
     %meta{ content: 'https://alexsmith.codes', property: 'og:url' }
     %meta{ content: '/images/alex_smith_og.png', property: 'og:image' }
     %meta{ content: '/images/alex_smith_og.png', property: 'og:image:secure_url' }
@@ -64,7 +64,7 @@
     %script{ src: 'https://unpkg.com/tippy.js@5' }
     = javascript_include_tag 'site'
 
-    %title Alex | Software Engineer
+    %title Alex | Senior Software Engineer
 
   %body.container-fluid
     = partial 'partials/top_nav_bar'
