--- a/source/partials/_experience_links.html.haml
+++ b/source/partials/_experience_links.html.haml
@@ -6,7 +6,7 @@
           %h3.card-title
             = link_to 'Forem (DEV)', '/about#dev'
           %p.card-text
-            Software Engineer
+            Senior Software Engineer
     .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
@@ -15,7 +15,7 @@
               %span.d-block.d-md-inline-block Justice by
               %span.d-block.d-md-inline-block Iron Tree
           %p.card-text
-            Cofounder & Creator
+            Cofounder, Creator, Lead Software Engineer
     .col-md-8.offset-md-2.col-sm-12
       .card.mb-3
         .card-body
