--- a/source/partials/_present.html.haml
+++ b/source/partials/_present.html.haml
@@ -101,13 +101,12 @@
   is the open-source platform that powers DEV that anyone can use to create an
   online community of their own.
 %p
-  Currently, I'm on the Site Reliability Engineering (SRE) team with
-  %a{ href: 'https://twitter.com/molly_struve', target: '_blank' } Molly Struve
-  who is DEV's Lead Site Reliability Engineer. Together the SRE team makes sure
-  the platform remains scalable and performant for our 5mm+ unique monthly
-  vistiors.
+  I've been working on several interesting projects including implementing edge
+  caching with NGINX and OpenResty to reduce server loads by 80%+, a
+  greenfield application to help manage paid/hosted Forems, implementing
+  Elasticsearch, and more!
 %p
-  DEV has quite the
+  Forem has quite the
   = succeed "." do
     %a{ href: 'https://docs.dev.to/technical-overview/stack/', target: '_blank' } tech stack
   The highlights include:
@@ -118,12 +117,13 @@
     %li Redis
     %li Sidekiq
     %li Elasticsearch
+    %li Stimulus
     %li and more!
 %p
-  As I mentioned, DEV is open-source so you can see all the
-  %a{ href: 'https://github.com/thepracticaldev/dev.to', target: '_blank' } code
+  As I mentioned, Forem is open-source so you can see all the
+  %a{ href: 'https://github.com/forem/forem', target: '_blank' } code
   and
-  %a{ href: 'https://github.com/thepracticaldev/dev.to/pulls?q=is%3Apr+author%3Aatsmith813', target: '_blank' } my contributions
+  %a{ href: 'https://github.com/forem/forem/pulls?q=is%3Apr+author%3Aatsmith813', target: '_blank' } my contributions
   for yourself!
 %p
   Oh yeah, I also decided to use the remote flexibility and after 10 years of
