--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -12,7 +12,7 @@
           %h1.font-weight-bold.theme-teal-text.block
             Alex Smith
           %h4.text-muted
-            Software Engineer
+            Senior Software Engineer
           .my-5
             %p.h4
               I've been called many things...
